# Cartograph

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
cartograph/: __init__.py  cache.py  cli.py  embed.py  extract.py  go_extract.py  java_extract.py  mcp_server.py  model.py  pipeline.py  rerank.py  resolve.py  retrieve.py  service.py  sql_extract.py  store.py  ts_extract.py  viz.py
cartograph/viz_assets/: template.html
docs/: eval-set-httpx.md  local-setup.md  mcp.md
eval/: README.md  aidigest_questions.yaml  anchors.resolved.json  baselines.py  bridge_questions.yaml  call_precision.py  click_questions.yaml  corpus.md  evallib.py  flask_questions.yaml  fusion_sweep.py  fusion_sweep_hash.csv  get_aidigest.sh  get_click.sh  get_corpus.sh  get_flask.sh  get_petclinic.sh  petclinic.pin  petclinic_questions.yaml  questions.yaml  resolve_anchors.py  results-ollama.csv  results.csv  run_eval.py  run_local.sh  run_local_all.sh  run_rerank.sh  scorecard.py
eval/agent_bench/: RESULTS.md  pilot_results.jsonl  run_bench.py  tasks.yaml
eval/bridge_corpus/: models.py  schema.sql
tests/: test_bridge.py  test_cache.py  test_cli.py  test_deeper_schema.py  test_dogfood.py  test_embed.py  test_embedded_sql.py  test_extract.py  test_go.py  test_impact.py  test_incremental.py  test_java.py  test_m0_acceptance.py  test_mcp.py  test_rerank.py  test_retrieve.py  test_score.py  test_service.py  test_sql.py  test_store.py  test_ts.py  test_viz.py
tests/fixtures/: Sample.java  embedded_join.py  embedded_sql.py  sample.js  sample.py  sample.ts  schema.sql
