[project]
name = "cartograph"
version = "0.0.1"
description = "Local-first hybrid retrieval over your codebase — a queryable knowledge graph for AI coding agents, fully offline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Vignesh Bhaskarraj" }]
dependencies = [
    "kuzu>=0.6",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "typer>=0.12",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.scripts]
cartograph = "cartograph.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mcp = ["mcp>=1.2"]
resolve = ["jedi>=0.19"]
sql = ["sqlglot>=20"]
ts = ["tree-sitter-typescript>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cartograph"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
