[project]
name = "cartograph"
version = "0.0.1"
description = "Local-first hybrid retrieval over your codebase — a queryable knowledge graph for AI coding agents, fully offline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Vignesh Bhaskarraj" }]
keywords = ["code-search", "knowledge-graph", "mcp", "retrieval", "ai-agents", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Kuzu's storage format and Cypher dialect shift across minors (store.py carries
    # a 0.11-specific workaround) — pin the minor until upgrades are tested.
    "kuzu>=0.11,<0.12",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "typer>=0.12",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/VigneshBhaskarraj/Cartograph"
Issues = "https://github.com/VigneshBhaskarraj/Cartograph/issues"

[project.scripts]
cartograph = "cartograph.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mcp = ["mcp>=1.2"]
resolve = ["jedi>=0.19"]
sql = ["sqlglot>=20"]
ts = [
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23",
]
java = [
    "tree-sitter-java>=0.23.5",
]
go = [
    "tree-sitter-go>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cartograph"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
